--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
     "vue-axios": "^3.4.0",
+    "vue-google-adsense": "^1.10.1",
+    "vue-script2": "^2.1.0",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
