--- a/package.json
+++ b/package.json
@@ -26,12 +26,11 @@
   "dependencies": {
     "apexcharts": "^3.32.0",
     "axios": "^0.24.0",
+    "cordova-admob": "^5.1.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
     "vue-axios": "^3.4.0",
-    "vue-google-adsense": "^1.10.1",
-    "vue-script2": "^2.1.0",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
