Alterando id de aplicação

--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.vue.coint.app",
+  "name": "com.ikkarus.coint",
   "displayName": "Coint",
   "version": "1.0.0",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
