nova chave admob icones cordova config.xml

--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -14,7 +14,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-admob": "^5.1.0",
-    "cordova-android": "~10.1.2",
+    "cordova-android": "^10.1.2",
     "cordova-connectivity-monitor": "^1.2.2",
     "cordova-play-services-version-adapter": "^1.1.0"
   },
